--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
 name: minecraft_calculator
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: 'none'
 
+executables:
+  mc_clone: mc_clone
 
 version: 1.0.0+1
 
@@ -18,7 +20,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
   flutter_lints: ^1.0.0
   test: ^1.17.12
